# ayttm

./: .cvsignore  AUTHORS  CHANGES  CHAT_PRINCIPLES  COPYING  ChangeLog  ChangeLog-0.2.1  ChangeLog-0.2.2  ChangeLog-0.2.3  ChangeLog-0.2.4  ChangeLog-0.3.0  ChangeLog-0.3.1  ChangeLog-0.3.2  ChangeLog-0.3.3  ChangeLog-0.3.4  ChangeLog-0.4.1  ChangeLog-0.4.2  ChangeLog-0.4.3  ChangeLog-0.4.4  ChangeLog-0.4.5  ChangeLog-0.4.6  ChangeLog-0.4.6-35  ChangeLog-0.5.0-45  ChangeLog-0.6.0  ChangeLog-pre0.4.bz2  ChangeLog.cvs2cl  INSTALL  Makefile.am  README  README.AIX  README.LINUX  README.NETBSD  README.WIN32  TODO  acconfig.h  acinclude.m4  ayttm.dsp  ayttm.dsw  ayttm.proj  ayttm.spec.in  (+11 more)
libproxy/: .cvsignore  Makefile.am  common.c  common.h  libproxy.h  net_constants.h  networking.c  networking.h  proxy.c  proxy.h  proxy_private.h  ssl.c  ssl.h  ssl_certificate.c  ssl_certificate.h
mingw32/: Makefile.am  aim-toc.la  autotrans.la  ay.iss  config.h  gettext-0.12.1-mingw.patch  giles_smiles.la  glib-2.2.2-mingw.patch  glib-config.txt  glib.m4  gtk+-1.3.0-mingw.patch  gtk+-1.3.0-set_props.patch  gtk-config.txt  gtk.m4  icq-toc.la  icq.la  import_everybuddy.la  import_gaim.la  import_gnomeicu.la  importicq.la  importlicq.la  irc.la  jabber.la  libiconv-1.9.1-mingw.patch  makedll  makeebdll  middle.la  msn2.la  msn_smileys.la  notes.la  rainbow.la  setup.bat  smiley-themer.la  smileysc.la  yahoo2.la  yahoo_smileys.la
mingw32/gdk/: Makefile.am
mingw32/gdk/win32/: Makefile.am
modules/aim-oscar/: Makefile.am  README  aim-oscar.c  aim.h
modules/aim-oscar/libfaim/: CHANGES  Makefile.am  aim_buildcode.h  aim_chatnav.c  aim_im.c  aim_meta.c  aim_rxhandlers.c  aim_rxqueue.orig.c  libfaim.dsp  md5.c  md5.h
modules/aim-toc/: .cvsignore  Makefile.am  aim-toc.c  aim.h
modules/aim-toc/libtoc/: libtoc.c  libtoc.h  toc2.txt
modules/aycryption/: Makefile.am  aycryption.c  select-keys.c  select-keys.h
modules/icq-toc/: Makefile.am  icq-toc.c  icq.h
modules/icq-toc/libtoc/: Makefile.am  PROTOCOL-2.txt  libtoc.c  libtoc.h
modules/icq/libicq/: Makefile.am  config.c  icq.h  icqconfig.h  icqfile.c  libicq.c  libicq.dsp  libicq.h  receive.c  receive.h  send.c  send.h  tcp.c  tcp.h  util.c  util.h
modules/image_filter/: Makefile.am  ayttm_streamer_wrapper  ayttm_streamer_wrapper.sh  img2jpc.c  video_capture.c
modules/importers/: Makefile.am  giles_smiles.c  import_everybuddy.c  import_gaim.c  import_gnomeicu.c  importicq.c  importlicq.c  msn_smileys.c  smileysc.c  yahoo_smileys.c
modules/irc/: .cvsignore  Makefile.am  irc.c  irc.h
modules/irc/libirc/: .cvsignore  Makefile.am  ctcp.c  ctcp.h  irc_message.c  irc_replies.h  libirc.c  libirc.h
modules/jabber/: .cvsignore  Makefile.am  jabber.c  libEBjabber.c  libEBjabber.h
modules/jabber/libjabber/: Makefile.am  TODO_N_BUGS  jconn.c  jid.c  jpacket.c  jutil.c  log.c  pproxy.c  rate.c
modules/jabber/libxode/: Makefile.am  expat.c  genhash.c  hashtable.c  pool.c  sha.c  snprintf.c  socket.c  str.c  xhash.c  xmlnode.c  xmlparse.c  xmlrole.c  xmltok.c  xmltok_impl.c  xmltok_ns.c  xstream.c
modules/msn2/: Makefile.am  msn.C  msn.c  read-line-fix
modules/msn2/libmsn2/: Changelog  INSTRUCTIONS  Makefile.am  TODO  md5.c  md5.h  msn-account.h  msn-commands.c  msn-connection.c  msn-connection.h  msn-contacts.c  msn-contacts.h  msn-errors.c  msn-errors.h  msn-ext.h  msn-http.c  msn-http.h  msn-login.c  msn-login.h  msn-message.c  msn-message.h  msn-sb.c  msn-sb.h  msn-soap.c  msn-soap.h  msn-util.c  msn-util.h  msn.c  msn.h  msn_bittybits.C  msn_bittybits.h  msn_core.C  msn_core.diff  msn_core.h  msn_interface.C  msn_interface.h
modules/smileys/: Makefile.am  giles_smiles.c  smiley-themer.c  smileysc.c
modules/smileys/console_smileys/: Makefile.am  aysmile.rc  blank.xpm  grin.xpm  oh.xpm  (+8 more)
modules/utility/: Makefile.am  autotrans.c  custom_message.c  middle.c  notes.c  rainbow.c
modules/yahoo2/: Makefile.am  yahoo.c
pixmaps/: .cvsignore  Makefile.am  action.xpm  admin_icon.xpm  aim_away.xpm  aim_online.xpm  angry.xpm  aol_icon.xpm  away.xcf  away_icon.xpm  ayttm.xpm  ayttm_32x32.xpm  ayttmlogo.xpm  beer.xpm  biglaugh.xpm  blank_icon.xpm  blankface.xpm  blush.xpm  buddy.xcf  cancel.xpm  checkbox_off.xpm  checkbox_on.xpm  confused.xpm  cooldude.xpm  cry.xpm  dt_icon.xpm  dude.xpm  eblogo.xpm  error.xpm  free_icon.xpm  grin.xpm  group-chat.xcf  group.xcf  help.xpm  heyyy.xpm  icq_away.xpm  icq_online.xpm  ignore.xpm  info.xpm  invite_btn.xpm  (+52 more)
pixmaps/console_smileys/: blush.xpm  confused.xpm  cooldude.xpm  kiss.xpm  worried.xpm
pixmaps/msn/: angel.xpm  bat.xpm  boy.xpm  brheart.xpm  bulb.xpm  cake.xpm  cat.xpm  clock.xpm  coffee.xpm  deadflower.xpm  devil.xpm  dog.xpm  email.xpm  film.xpm  flower.xpm  gift.xpm  girl.xpm  handcuffs.xpm  heart.xpm  kiss.xpm  moon.xpm  neutral.xpm  phone.xpm  photo.xpm  question.xpm  rainbow.xpm  run.xpm  runback.xpm  star.xpm  sun.xpm  thumbdown.xpm  thumbup.xpm
pixmaps/standard2/: dead.xpm  embarrased.xpm  grin.xpm  grin20.xpm  indifferent.xpm  kiss.xpm  kiss20.xpm  quiet.xpm  sad.xpm  sad20.xpm  shocked.xpm  smile.xpm  smile20.xpm  tears.xpm  tears20.xpm  tongue.xpm  wink.xpm
src/: .cvsignore  Makefile.am  about.c  about.h  account.c  account.h  account_parser.y  account_scanner.l  action.c  action.h  activity_bar.C  activity_bar.h  add_contact_window.c  add_contact_window.h  auto_complete.c  auto_complete.h  away_window.c  away_window.h  ayttm.rc  ayttm_tray.c  ayttm_tray.h  browser.c  browser.h  charconv.c  charconv.h  chat_room.c  chat_room.h  chat_window.c  chat_window.h  console_session.c  console_session.h  contact.h  contact_actions.c  contact_actions.h  contact_parser-new.y  contact_parser.y  contact_scanner.l  contact_util.C  contact_util.c  contact_util.h  (+94 more)
src/gtk/: Makefile.am  about.c  about.h  about_window.c  extgtktext.c  extgtktext.h  file_selection_dlg.C  gtk_eb_html.c  gtk_eb_html.h  gtk_tree_view_tooltip.c  gtk_tree_view_tooltip.h  gtkspell.c  gtkspell.h  gtkutils.c  gtkutils.h  html_text_buffer.c  html_text_buffer.h  log_window.C  message_windows.c  prefs_window.C  prefs_window.h
(+246 files in other folders)
